[gd_scene load_steps=11 format=3 uid="uid://c3j5g5nb4t434"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_7x77n"]
[ext_resource type="Script" path="res://scripts/HUD/canvas_layer.gd" id="2_etfvp"]
[ext_resource type="PackedScene" uid="uid://fb25b7dhraf0" path="res://assets/scenes/HUD/slots_containers_gui.tscn" id="3_r7285"]
[ext_resource type="PackedScene" uid="uid://b15xw453ocop2" path="res://assets/scenes/pause_menu.tscn" id="4_6qi1p"]
[ext_resource type="PackedScene" uid="uid://dn3vjaep77r6h" path="res://assets/scenes/input_settings/input_settings.tscn" id="5_5gtpt"]
[ext_resource type="Texture2D" uid="uid://dbprd3kd0re14" path="res://assets/resources/light.tres" id="6_05tdo"]
[ext_resource type="PackedScene" uid="uid://cea4klgxmlhqk" path="res://assets/scenes/dungeon.tscn" id="7_ks4jm"]
[ext_resource type="Shader" path="res://shaders/all_white.gdshader" id="8_mg2lc"]
[ext_resource type="PackedScene" uid="uid://chkbbejdqfu" path="res://assets/scenes/player/player.tscn" id="9_gruq7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_snudw"]
shader = ExtResource("8_mg2lc")

[node name="World" type="Node2D"]
script = ExtResource("1_7x77n")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(46, 47)
scale = Vector2(0.9, 0.9)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("camera_2d")]
process_mode = 3
script = ExtResource("2_etfvp")
camera_2d = NodePath("../Camera2D")

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_r7285")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("4_6qi1p")]

[node name="InputSettings" parent="CanvasLayer" instance=ExtResource("5_5gtpt")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VisibilityViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(10000, 10000)
render_target_update_mode = 4

[node name="PointLight2D" type="PointLight2D" parent="SubViewportContainer/VisibilityViewport"]
energy = 0.55
shadow_enabled = true
texture = ExtResource("6_05tdo")

[node name="VisibilityTileMap" parent="SubViewportContainer/VisibilityViewport" instance=ExtResource("7_ks4jm")]
material = SubResource("ShaderMaterial_snudw")

[node name="LightView" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(10000, 10000)
render_target_update_mode = 4

[node name="TileMap" parent="SubViewportContainer/LightView" instance=ExtResource("7_ks4jm")]

[node name="Lights" type="Node2D" parent="SubViewportContainer/LightView"]

[node name="CanvasModulate" type="CanvasModulate" parent="SubViewportContainer/LightView"]
color = Color(0, 0, 0, 1)

[node name="Collectables" type="Node" parent="SubViewportContainer/LightView"]

[node name="Enemies" type="Node" parent="SubViewportContainer/LightView"]

[node name="Player" parent="SubViewportContainer/LightView" node_paths=PackedStringArray("slotsContainer", "linked_position_node") instance=ExtResource("9_gruq7")]
z_index = 100
position = Vector2(46, 47)
speed = 50.0
slotsContainer = NodePath("../../../CanvasLayer/HUD")
linked_position_node = NodePath("../../VisibilityViewport/PointLight2D")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SubViewportContainer/LightView/Player"]
remote_path = NodePath("../../../../Camera2D")

[node name="PointLight2D" type="PointLight2D" parent="SubViewportContainer/LightView/Player"]
shadow_enabled = true
texture = ExtResource("6_05tdo")
